--- a/public/Q1_1stGraded.html
+++ b/public/Q1_1stGraded.html
@@ -1,4 +1,4 @@
 <script>
-  document.write("Hello World");
+  document.write("My name is Varick Caiden L. Co and I am from 9-Cesium. :)");
   
 </script>
