--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <nav>
     <ul>
       <li><a href="./public/Q1_1stGraded.html"> First Exercise </a> </li>
-        <li><a href="./public/Q1_1NGCsCo.html"> First Non-graded Exercise </a> </li>
+        <li><a href="./public/Q1_1stNGCsCo.html"> First Non-graded Exercise </a> </li>
     </ul>
    </nav>
   </section>
