--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <li><a href="./public/Q1_1stGraded.html"> First Exercise </a> </li>
         <li><a href="./public/Q1_1stNGCsCo.html"> First Non-graded Exercise </a> </li>
         <li><a href="./public/Q12GCesiumCo.html"> Second Graded Exercise </a> </li>
+        <li><a href="./public/Q13GCesiumCo.html"> Third Graded Exercise </a> </li>
     </ul>
    </nav>
   </section>
